--- a/Comp229-Assign03/Site.Master
+++ b/Comp229-Assign03/Site.Master
@@ -47,13 +47,14 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Application name</a>
+                    <a class="navbar-brand" runat="server" href="~/Home.aspx">D.A.V. Public School</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="~/About">About</a></li>
-                        <li><a runat="server" href="~/Contact">Contact</a></li>
+                        <li><a runat="server" href="~/Home">Home Page</a></li>
+                        <li><a runat="server" href="~/Student">Student Page</a></li>
+                        <li><a runat="server" href="~/Course">Course Page</a></li>
+                        <li><a runat="server" href="~/Update">Update Page</a></li>
                     </ul>
                 </div>
             </div>
@@ -63,7 +64,7 @@
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
+                <p>&copy; <%: DateTime.Now.Year %> - D.A.V. Public School</p>
             </footer>
         </div>
 
